--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <title>Basic HTML/Tailwind starter</title>
     <meta name="description" content="Basic HTML/Tailwind starter" />
-    <meta name="author" content="Daily Dev Tips" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="flex items-center w-screen h-screen bg-red-200 align-center">
-      Welcome
+      Let's HTML!
     </div>
   </body>
 </html>
